# allworkouts

./: .dockerignore  .gitignore  AGENTS.md  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  fly.toml
.ai/: api_plan.md  basic_prd.md  db_plan.md  db_structure.md  mvp_plan.md  parser_plan.md  prd.md  prd_plan.md  tech_stack.md  ui_plan.md  ui_plan_session_notes.md
.ai/rules/: backend.md  frontend.md  general.md
.ai/ui/: active-workout-implementation-plan.md  dashboard-implementation-plan.md  history-list-implementation-plan.md  login-page-implementation-plan.md  onboarding-page-implementation-plan.md  plan-detail-implementation-plan.md  plan-edit-implementation-plan.md  plan-import-wizard-implementation-plan.md  plans-list-implementation-plan.md  profile-page-implementation-plan.md  registration-page-implementation-plan.md  session-detail-implementation-plan.md  stats-page-implementation-plan.md  workout-complete-implementation-plan.md
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  fly.toml  pyproject.toml  seed_equipment.json  seed_exercises.json
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_seed_data.py  003_nullable_exercise_session_id.py  004_add_workout_hierarchy.py  005_add_user_name.py  20251210_1808_cbdbb91967a7_add_custom_exercise_fields.py  20251214_1324_fabe8ba45ba0_add_status_to_import_log.py  20251214_1630_6e309ad97d98_convert_reps_to_set_configurations.py
backend/app/: __init__.py  api.py  auth.py  config.py  database.py  enums.py  exceptions.py  main.py  models.py  schemas.py
backend/app/api/: __init__.py  auth.py  equipment.py  exercises.py  personal_records.py  stats.py  workout_plans.py  workout_sessions.py
backend/app/schemas/: __init__.py  auth.py  base.py  equipment.py  exercises.py  import_logs.py  personal_records.py  stats.py  user.py  workout_plans.py  workout_sessions.py
backend/app/services/: exercise_matcher.py  llm_service.py  parser_service.py
backend/docs/: parser_examples.md  parser_setup.md  parser_usage.md
backend/tests/: __init__.py  conftest.py  test_auth.py  test_equipment.py  test_exercises.py  test_parser_services.py  test_personal_records.py  test_stats.py  test_workout_plans.py  test_workout_sessions.py
e2e/: .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
e2e/pages/: base_page.py  dashboard_page.py  history_page.py  login_page.py  workout_page.py
e2e/tests/: test_workout_flow.py
frontend/: .dockerignore  .eslintrc.cjs  .prettierrc.json  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  router.ts  vite-env.d.ts
frontend/src/assets/: main.css
frontend/src/composables/: useEquipment.ts  (+2 more)
(+63 files in other folders)
